# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  02 May 2006; Roy Marples <uberlord@gentoo.org>:

    RC_COLDPLUG is now a pure pattern list which defaults to "*"

* baselayout-1.12.0_pre19 (02 May 2006)

  01 May 2006; Roy Marples <uberlord@gentoo.org>:

    /proc/net/wireless may not have whitespace after $iface:
    wpa_supplicant no longer requires ctrl_interface set.
    Thanks to kelmo for those ideas.

  28 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Tweak is_older_than than so it skips checking the timestamps on directories,
    just the files in the directory.

    Rewrite modules-update to make it readable and usuable without old modutils.

  24 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    revert the -k2 addition to sort in halt.sh as we only echo the second
    key to sort, #131001.

* baselayout-1.12.0_pre18 (22 Apr 2006)

  22 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Touchup fuser arguments in halt.sh so we dont have to pipe to /dev/null.

  22 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    udhcpc module now requires udhcp-0.9.9_pre20041216-r3 or newer with
    the --env command option.

  21 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    br2684 module should now work correctly.
    Document usage of br2684 module.

    move /lib/rcscripts/net.modules.d to /lib/rcscripts/net

  20 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Document --verbose option in rc-update #130643 by Christian Heim.

  18 Apr 2006; Mike Frysinger <vapier@gentoo.org>:

    Sort by mount point, not mount source, in halt.sh #130219 by Mark McKenna.

    Disable CTRL+C in depscan.sh while booting #126512 by Marko Djukic.

  18 Apr 2006; Roy Marples <uberlord@gentoo.org>:

    start-stop-daemon only removes the daemon stopping from the daemon
    started list, #130166.

  15 Apr 2006; Roy Marples <uberlord@gentoo.org>:
