@@ -16,15 +16,29 @@ RC_PARALLEL_STARTUP="no"
 
 RC_INTERACTIVE="yes"
 
+# Do we allow services to be hotplugged? If not, set to RC_HOTPLUG="no"
+# NOTE: This does not affect anything hotplug/udev related, just the
+# starting/stopping of the init.d service triggered by hotplug.
+
+RC_HOTPLUG="yes"
+
 # Dynamic /dev managers can trigger coldplug events which cause services to
 # start before we are ready for them. If this happens, we can defer these
-# services to start in the boot runlevel. RC_COLDPLUG is a list of services we
-# allow to be coldplugged in this way. Globbing is allowed as is prefixing
-# with ! which means don't coldplug.
-# Example - RC_COLDPLUG="net.wlan !net.* *"
-# This allows net.wlan and any service not matching net.* to coldplug.
+# services to start in the boot runlevel. Set RC_COLDPLUG="no" if you don't
+# want this.
+# NOTE: This does not affect anything coldplug/udev related, just the
+# starting/stopping of the init.d service triggered by coldplug.
 
-RC_COLDPLUG="*"
+RC_COLDPLUG="yes"
+
+# Some people want a finer grain over hotplug/coldplug. RC_PLUG_SERVICES is a
+# list of services that are matched in order, either allowing or not. By
+# default we allow services through as RC_COLDPLUG/RC_HOTPLUG has to be yes
+# anyway.
+# Example - RC_PLUG_SERVICES="net.wlan !net.*"
+# This allows net.wlan and any service not matching net.* to be plugged.
+
+RC_PLUG_SERVICES=""
 
 # RC_NET_STRICT_CHECKING allows some flexibility with the 'net' service.
 # The following values are allowed:
