@@ -1,9 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
-  02 May 2006; Roy Marples <uberlord@gentoo.org>:
+  04 May 2006; Roy Marples <uberlord@gentoo.org>:
 
-    RC_COLDPLUG is now a pure pattern list which defaults to "*"
+    RC_COLDPLUG is now just a yes|no setting and the service list allowed
+    is now in RC_PLUG_SERVICES.
+    Added RC_HOTPLUG setting similar to RC_COLDPLUG.
 
 * baselayout-1.12.0_pre19 (02 May 2006)
 
